--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
+  height: 60px;
   align-items: center;
   justify-content: space-between;
   padding: 0 1.5rem;
